{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 298,
  "lineage": "53d629dc-edda-10ff-e78d-79e28d5dd464",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:loadbalancer/app/dolibarr-lb/83e5865846a5ab52",
            "arn_suffix": "app/dolibarr-lb/83e5865846a5ab52",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dolibarr-lb-41988562.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:loadbalancer/app/dolibarr-lb/83e5865846a5ab52",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dolibarr-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-025b0af8721219c36"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d48299fa344d371f"
              },
              {
                "subnet_id": "subnet-0d689035a1c4982b3"
              }
            ],
            "subnets": [
              "subnet-0d48299fa344d371f",
              "subnet-0d689035a1c4982b3"
            ],
            "tags": {
              "Name": "dolibarr-lb"
            },
            "tags_all": {
              "Name": "dolibarr-lb"
            },
            "vpc_id": "vpc-0e236515bde721ab2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:listener/app/dolibarr-lb/83e5865846a5ab52/78b694b5dee35c01",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:listener/app/dolibarr-lb/83e5865846a5ab52/78b694b5dee35c01",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:loadbalancer/app/dolibarr-lb/83e5865846a5ab52",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:listener/app/dolibarr-lb/83e5865846a5ab52/840ccad778e40660",
            "certificate_arn": "arn:aws:acm:eu-central-1:761018890852:certificate/9e77b3a8-f39a-428f-9d66-1a206430d3cd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:targetgroup/dolibarr-ecs-tgr/a9c6e7c9cefa7f1c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:listener/app/dolibarr-lb/83e5865846a5ab52/840ccad778e40660",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:loadbalancer/app/dolibarr-lb/83e5865846a5ab52",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm.aws_acm_certificate.this",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.default",
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:targetgroup/dolibarr-ecs-tgr/a9c6e7c9cefa7f1c",
            "arn_suffix": "targetgroup/dolibarr-ecs-tgr/a9c6e7c9cefa7f1c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:761018890852:targetgroup/dolibarr-ecs-tgr/a9c6e7c9cefa7f1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:761018890852:loadbalancer/app/dolibarr-lb/83e5865846a5ab52"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dolibarr-ecs-tgr",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dolibarr-ecs-tgr"
            },
            "tags_all": {
              "Name": "dolibarr-ecs-tgr"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:security-group/sg-025b0af8721219c36",
            "description": "Security group for the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025b0af8721219c36",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-alb-sg",
            "name_prefix": "",
            "owner_id": "761018890852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-alb-sg"
            },
            "tags_all": {
              "Name": "prod-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:security-group/sg-06328c54c1d93a99c",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06328c54c1d93a99c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025b0af8721219c36"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-025b0af8721219c36"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "761018890852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "prod-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:security-group/sg-08d04e1ed5ae764ac",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d04e1ed5ae764ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06328c54c1d93a99c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "prod-rds-sg",
            "name_prefix": "",
            "owner_id": "761018890852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-rds-sg"
            },
            "tags_all": {
              "Name": "prod-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb_sg",
            "module.security_groups.aws_security_group.ecs_tasks_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058740dd83fbf8f16",
            "arn": "arn:aws:ec2:eu-central-1:761018890852:elastic-ip/eipalloc-058740dd83fbf8f16",
            "association_id": "eipassoc-05b3575f33a6a0bb7",
            "domain": "vpc",
            "id": "eipalloc-058740dd83fbf8f16",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0bea9ec8d26becaf3",
            "private_dns": "ip-10-0-4-156.eu-central-1.compute.internal",
            "private_ip": "10.0.4.156",
            "public_dns": "ec2-18-198-145-137.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.145.137",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0723b9f33925765eb",
            "arn": "arn:aws:ec2:eu-central-1:761018890852:elastic-ip/eipalloc-0723b9f33925765eb",
            "association_id": "eipassoc-067ecd118a96fd4e7",
            "domain": "vpc",
            "id": "eipalloc-0723b9f33925765eb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-083c47a65a10c0681",
            "private_dns": "ip-10-0-3-84.eu-central-1.compute.internal",
            "private_ip": "10.0.3.84",
            "public_dns": "ec2-18-196-240-241.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.196.240.241",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:internet-gateway/igw-0fed1aa0e0bd9deaa",
            "id": "igw-0fed1aa0e0bd9deaa",
            "owner_id": "761018890852",
            "tags": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-058740dd83fbf8f16",
            "association_id": "eipassoc-05b3575f33a6a0bb7",
            "connectivity_type": "public",
            "id": "nat-07a6f98e5e81eab56",
            "network_interface_id": "eni-0bea9ec8d26becaf3",
            "private_ip": "10.0.4.156",
            "public_ip": "18.198.145.137",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d48299fa344d371f",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0723b9f33925765eb",
            "association_id": "eipassoc-067ecd118a96fd4e7",
            "connectivity_type": "public",
            "id": "nat-0d6ee4781bd78fce4",
            "network_interface_id": "eni-083c47a65a10c0681",
            "private_ip": "10.0.3.84",
            "public_ip": "18.196.240.241",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d689035a1c4982b3",
            "tags": {
              "Environment": "prod",
              "Name": "prod-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-nat-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fed1aa0e0bd9deaa",
            "id": "r-rtb-097a3c0d1ff7f4ddf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-097a3c0d1ff7f4ddf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:route-table/rtb-08fca24c201e470a1",
            "id": "rtb-08fca24c201e470a1",
            "owner_id": "761018890852",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:route-table/rtb-097a3c0d1ff7f4ddf",
            "id": "rtb-097a3c0d1ff7f4ddf",
            "owner_id": "761018890852",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fed1aa0e0bd9deaa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c53b5b2f4b5c5b83",
            "route_table_id": "rtb-08fca24c201e470a1",
            "subnet_id": "subnet-0e14c4e3348f983a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aee5d055be59dddb",
            "route_table_id": "rtb-08fca24c201e470a1",
            "subnet_id": "subnet-00eb69fcd368db319"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eba3bd137a8c507",
            "route_table_id": "rtb-097a3c0d1ff7f4ddf",
            "subnet_id": "subnet-0d48299fa344d371f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02057b7512a7cc310",
            "route_table_id": "rtb-097a3c0d1ff7f4ddf",
            "subnet_id": "subnet-0d689035a1c4982b3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:subnet/subnet-0e14c4e3348f983a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e14c4e3348f983a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761018890852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-1"
            },
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:subnet/subnet-00eb69fcd368db319",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eb69fcd368db319",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761018890852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-private-2"
            },
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:subnet/subnet-0d48299fa344d371f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d48299fa344d371f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761018890852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-1"
            },
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:subnet/subnet-0d689035a1c4982b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d689035a1c4982b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "761018890852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-public-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-public-2"
            },
            "vpc_id": "vpc-0e236515bde721ab2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:761018890852:vpc/vpc-0e236515bde721ab2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d9a269eca866f4a",
            "default_route_table_id": "rtb-0325bd3d80d1a1bcc",
            "default_security_group_id": "sg-02c4a87c30a9242e6",
            "dhcp_options_id": "dopt-0ee2569ea8f2aea3b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e236515bde721ab2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0325bd3d80d1a1bcc",
            "owner_id": "761018890852",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}